src/test/resources/semantic/reject/printVoidType.ul
void main() {
}

void foo() {
    print bar();
}

void bar() {
}
